--- a/0707.html
+++ b/0707.html
@@ -1,12 +1,6 @@
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>投稿平台調查表單 | Story Publishing Platform Research Survey</title>
-</head>
-
-<body>
-    <iframe src="https://www.surveylegend.com/s/u2i" width="100%" height="1000px" style="frameborder: 0; border: 0; margin: 0 auto;"></iframe>
-</body>
-
-</html>
+<script>
+    window.location.replace("https://www.surveylegend.com/s/u2i");
+</script>
+<h1>
+    <a href="https://www.surveylegend.com/s/u2i">重新導向中，如無動靜，請點選此處</a>
+</h1>
